istio.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: service-a-gateway
spec:
  selector:
    istio: public-ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "service-a.dev.platformeng.exus.co.uk"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: service-a
spec:
  hosts:
    - "service-a.dev.platformeng.exus.co.uk"
  gateways:
    - service-a-gateway
  http:
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: service-a-service
            port:
              number: 5000
